2005-05-27  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	Fix bug 1892:
	
	* text2.C (getStringToIndex): constify cur argument.

	* factory.C (createInset/LFUN_TABULAR_INSERT): return 0 if no
	argument has been given
	(createInset/LFUN_INDEX_INSERT): just return a new inset (do not
	try to invoke LFUN_INSET_APPLY).

	* text3.C (dispatch/LFUN_TABULAR_INSERT): open the tabular dialog
	if no inset was created by doInsertInset
	(doInsertInset): return true if an inset has been inserted.

2005-05-23  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* vspace.C (asGUIName): new method. A version of the space
	suitable for showing on screen.

2005-05-20  Michael Schmitt  <michael.schmitt@teststep.org>

	* MenuBackend.C:
	* lyxrc.C: rename "ASCII" to "Plain Text"

2005-05-18  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* buffer_funcs.C (expandLabel): take a Buffer as argument;
	translate the labelstring.
	(setCounter): translate labelstring as needed.

	* output_docbook.C (makeCommand): fix expandLabel invokation

2005-05-14  Michael Schmitt  <michael.schmitt@teststep.org>

	* BufferView.C: fix dialog title

2005-05-18  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* lyx_main.C (priv_exec): fix logic error with help from Angus
	* lyx_main.C (parse_execute): set is_gui = false and remove now
	obsolete comment about a segfault

2005-05-18  Angus Leeming  <leeming@lyx.org>

	* buffer.C (readFile): Quote all file names passed to lyx2lyx.

2005-05-12  Martin Vermeer  <martin.vermeer@hut.fi>

	* tabular.[hC]: added setCellInset to fix tabular paste.

2005-05-11  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* buffer.C (save): check if destination is writable before trying
	to copy a file

2005-05-11  Martin Vermeer  <martin.vermeer@hut.fi>

	* BufferView_pimpl.C (update): fix processEvents -caused update
	recursion bug

2005-05-10  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* buffer_funcs.C (setCounter): fix test for numbering of
	environments. 
